remove .iml file

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .idea
 .mvn
 target
-hr_nahla_task.iml
+Vishapin.iml
 # Compiled class file
 *.class
 
 # Log file
 *.log
-
+adding  final touch
 # BlueJ files
 *.ctxt
 
